--- a/candy/templates/404.html
+++ b/candy/templates/404.html
@@ -7,5 +7,5 @@
 {% block content %}
 <h1 class="text-white">Page Not Found</h1>
 <p></p>
-<a href="{{ url_for('routes.index')}}" class="btn btn-info">Return Home</a>
+<a href="{{ url_for('general.index')}}" class="btn btn-info">Return Home</a>
 {% endblock %}
