feat: change front-end styles for improved display (1024x600px)

--- a/candy/templates/gallery.html
+++ b/candy/templates/gallery.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% if images %}
-<h4>Masterpieces by {{ user.upper() }}</h4>
+<h4>MASTERPIECES BY {{ user.upper() }}</h4>
 
 <table class="table table-hover">
     <caption>
