--- a/candy/templates/draw.html
+++ b/candy/templates/draw.html
@@ -9,7 +9,7 @@
 {% block content %}
 
 
-<nav class="navbar navbar-expand-xl navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand">Controls</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -34,7 +34,7 @@
             {% endfor %}
           </div>
         </li>
-        <li class="nav-item mt-1" style="width: 250px;">
+        <li class="nav-item mt-1" style="width: 120px;">
           <div class="d-grid gap-2">
             <button type="button" class="btn btn-outline-secondary"
               onclick="changeColour('rgb(255,255,255)')">Eraser</button>
@@ -46,7 +46,7 @@
             <input type="range" class="form-range flex-grow-1" id="brush-width-range">
           </div>
         </li>
-        <li class="nav-item mt-1" style="width: 250px;">
+        <li class="nav-item mt-1" style="width: 200px;">
           <div class="d-grid gap-2">
             <button type="button" class="btn btn-secondary" onclick="canvasSetup()">Reset Drawing</button>
           </div>
